# target-bigquery

./: pyproject.toml
target_bigquery/: __init__.py  batch_job.py  gcs_stage.py  storage_write.py  streaming_insert.py  target.py
target_bigquery/tests/: test_core.py  test_sync.py
