[project]
name = "z3-target-bigquery"
version = "0.7.2"
description = "z3-target-bigquery is a Singer target for BigQuery. It supports storage write, GCS, streaming, and batch load methods. Built with the Meltano SDK."
authors = [{ name = "Alex Butler", email = "butler.alex2010@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "ELT",
    "BigQuery",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.25.1",
    "singer-sdk~=0.48.1",
    "google-cloud-bigquery[bqstorage]>=3.30.1,<4",
    "orjson>=3.7.2,<4",
    "tenacity>=9.1.1,<10",
    "grpcio-tools>=1.51.1,<2",
    "google-cloud-storage>=3.3.0,<4",
    "grpcio-status>=1.51.1,<2",
]

[project.urls]
Homepage = "https://github.com/z3z1ma/target-bigquery"
Repository = "https://github.com/z3z1ma/target-bigquery"

[project.scripts]
target-bigquery = "target_bigquery.target:TargetBigQuery.cli"

[dependency-groups]
dev = [
    "pytest",
    "tox",
    "flake8",
    "black",
    "pydocstyle",
    "mypy",
    "types-requests",
    "isort",
    "hatchling>=1.27.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "target_bigquery/*.py",
    "README.md",
    "LICENSE",
    "target_bigquery/*.py",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
include = [
    "target_bigquery/*.py",
    "README.md",
    "LICENSE",
    "target_bigquery/*.py",
    "README.md",
    "LICENSE",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py312"]
preview = true

[tool.isort]
color_output = true
line_length = 100
profile = "black"
src_paths = "target_bigquery"
